# sketches

./: README.md
bandit/: Makefile.toml  README.md
bandit/bandit/: Cargo.toml
bandit/bandit/src/: agent.rs  annealing_epsilon_greedy.rs  annealing_softmax.rs  epsilon_greedy.rs  exp3.rs  lib.rs  random.rs  softmax.rs  thompson.rs  ucb1.rs
bandit/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
bandit/web/app/: const.ts  context.ts  page.tsx  utils.ts
bandit/web/app/components/: parameters.tsx
bandit/web/app/simulation/: index.tsx
bandit/web/src/: App.tsx  utils.ts
bandit/web/src/pkg/: bandit.d.ts  bandit.js  bandit_bg.wasm  bandit_bg.wasm.d.ts  package.json
cdk/: README.md  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
